--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@ Notes
             {% if 'user' in session %}
             <button class="button-primary" type="button" id="btn-save">Save</button>
             {% else %}
-            <button class="button-primary" type="button" id="btn-save">Download</button>
+            <button class="button-primary" type="button" id="btn-download">Download</button>
             {% endif %}
         </section>
         <section class="content-editor">
@@ -41,6 +41,8 @@ Notes
 <script src="../static/download.js"></script>
 <script>
 
+    let fExtension = '.txt'; 
+
     $('.home').addClass('active');
     $('.about').removeClass('active');
 
@@ -53,50 +55,62 @@ Notes
         };
     });
 
+    function getFileInfo() {
+        const title = $('.title-input').text();
+        const content = document.querySelector('.editor');
+
+        const contentText = document.querySelector('.editor').innerText;
+        return [title, contentText];
+    }
+
+    $('#btn-download').on('click', (event) => {
+        const fileInfo = getFileInfo();
+        const fileTitle = fileInfo[0];
+        const fileContents = fileInfo[1];
+        download(fileContents, fileTitle+fExtension, "text/html");
+    });
+
     $(document).ready(function (event) {
         $('#btn-save').on('click', function (event) {
-            const title = $('.title-input').text();
-            const content = document.querySelector('.editor');
-
-            const contentText = document.querySelector('.editor').innerText;
+            const fileInfo = getFileInfo();
+            const title = fileInfo[0];
+            const file_contents = fileInfo[1];
             $.ajax({
                 data: {
                     fileTitle: title,
-                    fileContent: contentText,
+                    fileContent: file_contents,
                 },
                 type: 'POST',
                 url: '/home',
                 success: () => {
-                    const sessionUser = "{{ session.user }}";
-                    if (sessionUser === "")
-                        downloadFile(title)
-                    else {
-                        showSavedMessage();
-                    }
+                    showSavedMessage();
                 }
             });
         });
     });
 
     function showSavedMessage() {
-        $('.saved-message').css('display', "block");
-        setTimeout(() => {
-            $('.saved-message').animate(
-                {
-                    opacity: "0",
-                }, 500, () => {
-                    $('.saved-message').css('display', 'none');
-                }
-            )
-        }, 1000);
+        $('.saved-message').animate(
+            {
+                opacity: "1",
+            }, 500, () => {
+                setTimeout(
+                    () => {
+                        $('.saved-message').animate({
+                            opacity: "0",
+                        }, 500);
+                    }, 1000
+                );
+            }
+        );
     }
 
     function downloadFile(fileName) {
         var blob = new Blob([[fileName]], { type: 'text/html;charset=utf-8' });
         var link = document.createElementNS('http://www.w3.org/1999/xhtml', 'a');
         link.href = URL.createObjectURL(blob);
-        link.download = fileName + '.txt';
-        link.click();
+        link.download = fileName + fExtension;
+        setTimeout(link.click(), 1000);
     }
 
     window.addEventListener('load', function () {
