--- a/templates/register.html
+++ b/templates/register.html
@@ -8,9 +8,10 @@ Register
             overflow: hidden;
         }
     </style>
+    <link rel="stylesheet" href="../static/css/form.css">
 {% endblock %}
 {% block content %}
-<form action="#" method="POST" class="register-form">
+<form action="#" method="POST" class="form">
     <h3>Register</h3>
     <section class="fields">
         <div class="field-items">
