--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="../static/style.css" />
-  <link rel="stylesheet" href="../static/editor.css">
+  <link rel="stylesheet" href="../static/css/style.css" />
+  <link rel="stylesheet" href="../static/css/editor.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -45,7 +45,7 @@
   <div class="container">
     <nav>
       <div class="logo">
-        <img src="../static/NotesLogo.svg" alt="logo" />
+        <img src="../static/imgs/NotesLogo.svg" alt="logo" />
         <h2>Notes</h2>
       </div>
       <ul class="nav-list">
@@ -80,7 +80,44 @@
           
         </li>
       </ul>
+      <div id="mob-view">
+        <a href="#"><img src="../static/imgs/HamburgerMenu.svg" alt="="></a>
+      </div>
     </nav>
+    <div class="mob-list">
+      <a href="#" id="close-btn"><img src="../static/imgs/CloseBtn.svg" alt="x"></a>
+      <ul class="mob-links">
+        <li class="mob-items">
+          <a href="{{url_for('home')}}" class="home"> Home </a>
+        </li>
+        <li class="mob-items">
+          <a href="{{url_for('about')}}" class="about"> About </a>
+        </li>
+        <li class="mob-items hr-base">
+          {% if 'user' in session %}
+          {% else %}
+          <a href="{{url_for('register')}}" class="button-secondary"> Register </a>
+          {% endif %}
+        </li>
+        <li class="mob-items" id="login-btn">
+          {% if 'user' in session %}
+          <a href="#"
+          class="button-primary">
+          {% with messages = get_flashed_messages() %} 
+          {% if messages %} 
+          {% for message in messages %}
+          <p id="logged-in">{{ message }}</p>
+          {% endfor %}
+          {% endif %} {% endwith %}
+          </a>
+          {% else %}
+          <a href="{{url_for('login')}}" class="button-primary">
+          <p>Login</p>
+          </a>
+          {% endif %} 
+        </li>
+      </ul>
+    </div>
     {% block content %} {% endblock %}
     {% if 'user' in session %}
     <ul class="user-navs">
@@ -92,7 +129,7 @@
   </div>
 
   
-  <script src="../static/app.js"></script>
+  <script src="../static/js/app.js"></script>
   <script type=text/javascript> $SCRIPT_ROOT={{ request.script_root|tojson|safe }}; </script>
   <script>
 
