--- a/templates/splashscreen.html
+++ b/templates/splashscreen.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
-    <link rel="stylesheet" href="../static/splash.css">
+    <link rel="stylesheet" href="../static/css/splash.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>   
 </head>
 
@@ -13,7 +13,7 @@
 
     <div class="splash-container">
         <div class="splash-background">
-            <div class="img-holder"><img src="../static/NotesLogo.svg" alt="Logo"></div>
+            <div class="img-holder"><img src="../static/imgs/NotesLogo.svg" alt="Logo"></div>
             <div class="name">
                 <h1>Notes</h1>
             </div>
@@ -42,7 +42,7 @@
             opacity: 0,
             x: "-50%",
         }, {
-            x: "-10%",
+            x: "-25%",
             opacity: 1,
             duration: 1,
         });
