--- a/templates/about.html
+++ b/templates/about.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div>
-            <a class="button-primary" href="mailto:shubham.heeralal@gmail.com">Found a bug ?</a>
+            <a id="bugReportBtn" class="button-primary" href="mailto:shubham.heeralal@gmail.com">Found a bug ?</a>
         </div>
     </div>
     <div class="tools">
