--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
         </li>
       </ul>
       <div id="mob-view">
-        <a href="#"><img src="../static/imgs/HamburgerMenu.svg" alt="="></a>
+        <a href="#"><img src="../static/imgs/HamburgerMenu.svg" class="ham-icon" alt="="></a>
       </div>
     </nav>
     <div class="mob-list">
