--- a/templates/register.html
+++ b/templates/register.html
@@ -11,34 +11,35 @@ Register
     <link rel="stylesheet" href="../static/css/form.css">
 {% endblock %}
 {% block content %}
-<form action="#" method="POST" class="form">
-    <h3>Register</h3>
-    <section class="fields">
-        <div class="field-items">
-            <label for="un">UserName : </label>
-            <input type="text" name="un" id="username">
-        </div>
-        <div class="field-items">
-            <label for="em">Email : </label>
-            <input type="email" name="em" id="email">
-        </div>
-        <div class="field-items">
-            <label for="pwd">Password : </label>
-            <input type="password" name="pwd" id="password">
-        </div>
-        <div class="field-items">
-            <label for="cpwd">Renter Password : </label>
-            <input type="password" name="cpwd" id="cpassword">
-        </div>
-    </section>
+<div class="center-container">
+    <form action="#" method="POST" class="form">
+        <h3>Register</h3>
+        <section class="fields">
+            <div class="field-items">
+                <label for="un">UserName : </label>
+                <input type="text" name="un" id="username">
+            </div>
+            <div class="field-items">
+                <label for="em">Email : </label>
+                <input type="email" name="em" id="email">
+            </div>
+            <div class="field-items">
+                <label for="pwd">Password : </label>
+                <input type="password" name="pwd" id="password">
+            </div>
+            <div class="field-items">
+                <label for="cpwd">Renter Password : </label>
+                <input type="password" name="cpwd" id="cpassword">
+            </div>
+        </section>
 
-    <section class="buttons">
-        <input type="reset" value="Clear" class="button-secondary large-width">
-        <button class="button-primary" type="submit">Register</button>
-    </section>
+        <section class="buttons">
+            <input type="reset" value="Clear" class="button-secondary large-width">
+            <button class="button-primary" type="submit">Register</button>
+        </section>
 
-</form>
-
+    </form>
+</div>
 
 {% with errors = get_flashed_messages(category_filter=["error"]) %}
 {% if errors %}
