--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,10 +1,18 @@
 
-.form {
-    margin: 8% 22%;
-    background-color: rgba(0, 0, 0, 0.2);
+.center-container {
     display: grid;
+    place-content: center;
+    height: 80vh;
+}
+
+.form {
+    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
     place-items: center;
     border-radius: 10px;
+    max-height: 40em;
+    max-width: 30em;
 }
 
 .fields {
@@ -34,4 +42,33 @@
     display: flex;
     margin: 1em 0 2em 0;
     justify-content: space-evenly;
+}
+
+@media screen and (max-width: 598px) {
+
+    .center-container {
+        place-content: initial;
+    }
+
+    .form {
+        border-radius: 0;
+        height: 100vh;
+        width: 100%;
+        padding-top: 2em;
+    }
+
+    .field-items {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .field-items input {
+        width: 100%;
+    }
+
+    .form h3 {
+        font-size: 1.6em;
+        letter-spacing: 1.2;
+    }
+
 }
