--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,6 +7,12 @@
     color: white;
     font-size: 20px;
 }
+
+.title-input {
+    padding: 0.4em 1.5em;
+    font-size: 14px;
+    margin: 0 1.5em;
+}
   
 #notearea {
     resize: none;
@@ -34,4 +40,28 @@
     border-radius: 5px;
     padding: 0.1em 0.5em;
     color: var(--color-background);
+}
+
+@media screen and (max-width: 598px){
+    .saved-message {
+        bottom: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%)
+    }
+
+    .filename-input {
+        flex-direction: column;
+        gap: 10px;
+        margin: 1em 0
+    }
+
+    .filename-input>label {
+        display: none;
+    }
+
+    .title-input {
+        min-width: 90%;
+    }
+
 }
