--- a/templates/login.html
+++ b/templates/login.html
@@ -9,24 +9,25 @@ Login
 
 {% block content %}
 
-<form action="{{ url_for("login")}}" method="POST" class="form">
-  <h3>Login</h3>
-  <section class="fields">
-    <div class="field-items">
-      <label for="uname">UserName :</label>
-      <input type="text" name="un" />
-    </div>
-    <div class="field-items">
-      <label for="password">Password :</label>
-      <input type="password" name="pwd" id="password" />
-    </div>
-  </section>
-  <section class="buttons">
-    <a href="{{url_for('register')}}" class="button-secondary">Register</a>
-    <button class="button-primary" type="submit">Login</button>
-  </section>
-</form>
-
+<div class="center-container">
+  <form action="{{ url_for("login")}}" method="POST" class="form">
+    <h3>Login</h3>
+    <section class="fields">
+      <div class="field-items">
+        <label for="uname">UserName :</label>
+        <input type="text" name="un" />
+      </div>
+      <div class="field-items">
+        <label for="password">Password :</label>
+        <input type="password" name="pwd" id="password" />
+      </div>
+    </section>
+    <section class="buttons">
+      <a href="{{url_for('register')}}" class="button-secondary">Register</a>
+      <button class="button-primary" type="submit">Login</button>
+    </section>
+  </form>
+</div>
 
 {% with errors = get_flashed_messages(category_filter=["error"]) %}
 {% if errors %}
